Replace deprecated getId() with threadId() call